--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "formik": "^2.2.9",
     "json-server": "^0.17.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-router-dom": "6.2.1"
+    "react-router-dom": "6.2.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "17.0.2",
