--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^9.13.0",
     "formik": "^2.2.9",
     "json-server": "^0.17.0",
     "react": "17.0.2",
